        - Imager::write() was doing nothing with the result of the call 
          to i_writegif_gen(), in particular it wasn't returning () on 
          failure.
        - added tests for paletted image handling and the methods
          specific to those images
        - the XS for i_setcolors() was missing the OUTPUT clause for
          RETVAL, and hence wasn't returning failure on failure.
        - supplying a sufficiently small scaling value could make the
          scale() method return an image with zero height or width.
          Several of the above together resolve 
          https://rt.cpan.org/Ticket/Display.html?id=7467
        - the void context warning for scale() now includes the callers
          filename/line (instead of the default of Imager.pm line 15xx)
        - Imager->new will now return undef if the dimensions or number of
          channels specified for an image are out of range.  An error
          message can be retrieved with Imager->errstr.
        - added the C<builtin> color specifier and the 
          Imager::Color::Table class which defines those colors.
          Resolves https://rt.cpan.org/Ticket/Display.html?id=2593
        - added the equals() method to Imager::Color.
          Resolves https://rt.cpan.org/Ticket/Display.html?id=2238
        - prevent a test warning introduced by the above
        - the rotate() and matrix_transform() methods now accept a 'back'
          parameter specifying a background color.  This is only used
          where there is no source data (think of the corners around an
          image rotated 45 degrees) and it not combined with transparent
          pixels from the source image.
          Resolves https://rt.cpan.org/Ticket/Display.html?id=6140

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/~addi/perl/Imager/

=================================================================
