@@ -825,6 +825,11 @@ Revision history for Perl extension Imager.
           image rotated 45 degrees) and it not combined with transparent
           pixels from the source image.
           Resolves https://rt.cpan.org/Ticket/Display.html?id=6140
+        - removed a warning generated by the new matrix_transform() test
+        - added a method index to Imager.pm
+        - corrected "flood fill" to "flood_fill" in Imager/Draw.pod
+        - removed compose() method from Imager/Transformations.pod since
+          it isn't implemented yet
 
 =================================================================
 
